feat(identity): 完成一次性 Smart Mall Ticket
